7 November 2008: Wouter
	- fix bug 217: fixed, setreuid and setregid do not work on MacOSX10.4.

6 November 2008: Wouter
	- dname_priv must decompress the name before comparison.
	- iana portlist updated.

5 November 2008: Wouter
	- fixed possible memory leak in key_entry_key deletion.
	  Would leak a couple bytes when trust anchors were replaced.
	- if query and reply qname overlap, the bytes are skipped not copied.
	- fixed file descriptor leak when messages were jostled out that
	  had outstanding (TCP) replies.
	- DNAMEs used from cache have their synthesized CNAMEs initialized
	  properly.
	- fixed file descriptor leak for localzone type deny (for TCP).
	- fixed memleak at exit for nsec3 negative cached zones.
	- fixed memleak for the keyword 'nodefault' when reading config.
	- made verbosity of 'edns incapable peer' warning higher, so you
	  do not get spammed by it.
	- caught elusive Bad file descriptor error bug, that would print the
	  error while unnecessarily try to listen to a closed fd. Fixed.

4 November 2008: Wouter
	- fixed -Wwrite-strings warnings that result in better code.

3 November 2008: Wouter
	- fixup build process for Mac OSX linker, use ldns b32 compat funcs.
	- generated configure with autoconf-2.61.
	- iana portlist updated.
	- detect if libssl needs libdl.  For static linking with libssl.
	- changed to use new algorithm identifiers for sha256/sha512
	  from ldns 1.4.0 (need very latest version).
	- updated the included ldns tarball.
	- proper detection of SHA256 and SHA512 functions (not just sizes).

23 October 2008: Wouter
	- a little more debug info for failure on signer names. prints names.

22 October 2008: Wouter
	- CFLAGS are picked up by configure from the environment.
	- iana portlist updated.
	- updated ldns to use 1.4.0-pre20081022 so it picks up CFLAGS too.
	- new stub-prime: yesno option. Default is off, so it does not prime.
	  can be turned on to get same behaviour as previous unbound release.